@@ -31,7 +31,7 @@ no_index:
     - xt
 requires:
   File::Share: 0
-  Map::Tube: '3.06'
+  Map::Tube: '3.09'
   Moo: 0
   namespace::clean: 0
   perl: 5.8.0
