@@ -1,4 +1,5 @@
 0.08
+ - Implement station order.
  - Improve comment in tests.
  - Rewrite XML map to new version without junctions.
 
